# ecoflow-dashboard

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
ecoflow_dashboard/: __main__.py  alerts.py  api.py  config.py  controls.py  dashboard.py  local_api.py  logger.py  mqtt_client.py  network.py  scheduler.py  solar_forecast.py  telegram_bot.py  version_check.py  web.py
