[project]
name = "ecoflow-dashboard"
version = "0.5.2"
description = "Real-time CLI dashboard for EcoFlow power stations & Smart Home Panel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ecoflow", "dashboard", "battery", "solar", "mqtt", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "paho-mqtt>=1.6,<3.0",
    "rich>=13.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "flask>=3.0",
]

[project.urls]
Homepage = "https://github.com/WIN365ru/ecoflow-dashboard"
Issues = "https://github.com/WIN365ru/ecoflow-dashboard/issues"

[project.scripts]
ecoflow-dashboard = "ecoflow_dashboard.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
